<resources>
    <string name="google_maps_key">AIzaSyAZiPveeIdgbXSQKv7iB1cUlbBq-gLNSUQ </string>
    <string name="app_name">EComerceApp</string>
    <string name="title_home">Add Category</string>
    <string name="title_dashboard">Orders</string>
    <string name="title_notifications">Messages</string>
    <string name="title_activity_commodities">Commodities</string>
    <string name="Loading">loading</string>
    <string name="Error">error</string>
    <string name="No_Photo_For_this_Category">Select One Image (Required)</string>
    <string name="Yes">yes</string>
    <string name="Wait">Wating to Upload the New Category</string>
    <string name="You_Will_Be_Remove_All">you will be delete all item in this category also</string>
    <string name="You_Will_Be_Remove_Item">you will remove this item</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chate">ChateActivity</string>
    <string name="Message">Message</string>
    <string name="I_Need_This_Permisstion">I_Need_This_Permisstion</string>
    <string name="title_activity_vvvvvvvvvvvvvvvvvv">Map</string>
    <string name="default_web_client_id">1037043084314-mc3n6ttugh4nl9tkvl9grk04f5ahbf8o.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="choose_the_image">Choose Image</string>
    <string name="enter_your_phone">Enter Youre Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="login">Login</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="chat">Chat</string>
    <string name="basket">Basket</string>
    <string name="buy">Buy</string>
    <string name="send_to_sales_basket">Send To Sales Basket</string>
    <string name="ignore">Ignore</string>
    <string name="customer_name">Customer Name:</string>
    <string name="customer_phone">Customer Phone:</string>
    <string name="customer_ddress">Customer Address:</string>
    <string name="totalprice">Total Price:</string>
    <string name="data">Data:</string>


</resources>
