<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Activiteis.EditCategory">


    <ImageView
        android:id="@+id/display_Image_Category"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:layout_marginEnd="8dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@id/gLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/gLine"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_Image_Category">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:padding="10dp"
        android:text="@string/choose_the_image"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/display_Image_Category"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/category_name"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbutton"
        android:padding="10dp"
        android:text="@string/upload"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/choose_image"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="@+id/choose_image"
        app:layout_constraintTop_toBottomOf="@+id/choose_image" />

</android.support.constraint.ConstraintLayout>